front-end functionality getting publishers(A3 8.2)

--- a/client/index.html
+++ b/client/index.html
@@ -7,23 +7,20 @@
 </head>
 <body>
     <h1>Superhero Information</h1>
-    <div id="searchBar">
-        <p>Get all superhero information</p>
-        <input type="number" id="heroId" placeholder="Superhero ID (0 - 733)">
-        <button class="searchButton" onclick="getHeroInfo()">Search</button>
+    <p>Get all superhero information</p>
+    <input type="number" id="heroId" placeholder="Superhero ID (0 - 733)">
+    <button class="searchButton" onclick="getHeroInfo()">Search</button>
 
-        <br><br>
+    <br><br>
 
-        <p>Get all superhero powers</p>
-        <!-- <input type="number" id="heroId2" placeholder="Superhero ID (0 - 733)"> -->
-        <input id="heroId2" placeholder="Superhero ID (0 - 733)">
-        <button class="searchButton2" onclick="getHeroPowers()">Search</button>
-    </div>
+    <p>Get all superhero powers</p>
+    <!-- <input type="number" id="heroId2" placeholder="Superhero ID (0 - 733)"> -->
+    <input id="heroId2" placeholder="Superhero ID (0 - 733)">
+    <button class="searchButton2" onclick="getHeroPowers()">Search</button>
+    <button class="publishers" onclick="getPublisherList()">Get Publishers</button>
     
-    <br>
-    <div id="superheroInfo"></div>
-    <br>
-    <div id="superheroPowers"></div>
+    <br><br>
+    <div id="searchResults"></div>
     <script defer src="script.js"></script>
 </body>
 </html>
