fixing search to work with race and publisher

--- a/client/index.html
+++ b/client/index.html
@@ -44,8 +44,8 @@
     <p>Select Field: </p>
     <select id="field">
         <option value="name">Name</option>
-        <option value="race">Race</option>
-        <option value="publisher">Publisher</option>
+        <option value="Race">Race</option>
+        <option value="Publisher">Publisher</option>
         <option value="power">Power</option>
     </select>
     <input type="text" id="pattern" placeholder="Enter pattern">
