feat: simplify search results with button to expand
search results show name and publisher, expanding shows all additional information

--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
     <input type="text" id="pattern" placeholder="Enter pattern">
     <input type="number" id="n" placeholder="Enter number of results">
     <button onclick="searchHeroes()">Search</button>
+    <button onclick="expand()">Expand Results</button>
     </div>
     <div id="mainSearchResults"></div>
 
